Closed Bug 204248 Opened 23 years ago Closed 23 years ago

No maximize/minimize buttons in new Mailnews window, and raise & lower broken

Categories

(SeaMonkey :: MailNews: Message Display, defect)

defect
Not set
major

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: Matti, Assigned: emaijala+moz)

References

Details

(Keywords: regression)

Attachments

(1 file)

win2k build 20030502.. a) open Mailnews b) select "open in new Mail Window" in the folder context menu (right click a folder) or click on a "Click here to remove all expired articles" link in an expired Newsgroup Post c) see the new opened mailnews window without minimize/maximize button but you can still resize the window
Confirmed: Linux/x86 20030503. The problem is actually much worse than it appears at first glance. In this second mozilla messenger window (using the branding names :), keyboard shortcuts for minimise/maximise don't work either. Worse, the window cannot be raised or lowered. Keyboard shortcuts for this are ignored, and window manager "raise-on-focus" doesn't happen. This makes the app suite practically unusable for anyone running 2 mozilla messenger windows, if they're big enough overlap. This all on metacity 2.4.34. The regression ocurred between 2003043011 & 2003050105 (checkout hour times in GMT).
Severity: normal → major
Flags: blocking1.4b?
OS: Windows 2000 → All
Hardware: PC → All
Summary: No maximize/minimize buttons in new Mailnews window → No maximize/minimize buttons in new Mailnews window, and raise & lower broken
Note I'm using GTK2. I wonder if this is related to the fix for: 174471 [gtk2] need to port over the nsITheme interface code to gtk2 which seems to have landed at about the right time.
I *can't* confirm this. Todays cvs (20030503) build is working fine for me with gtk2 toolkit. However i am running windowmaker windowmanager. Calum's problem is probably metacity windowmanager as stacking is a function of the windowmanager.
Interesting. I'll bet mail/news is opening the new window as a dialog. I can reproduce this here. The stacking order is the big clue.
Blocks: gtk2
It's more likely that bug 157438 caused this. Is this happening on windows, by any chance?
this happens on win2k (see my initial comment) and biesi saw it in an non gtk2 Linux build.
Flags: blocking1.4b?
Flags: blocking1.4b-
Flags: blocking1.4?
So this is or isn't a problem in the mozilla.org default builds (not GTK2)?
I've not tried a mozilla.org default build, but it is a problem in non-GTK2 builds. We build here from cvs, and I'm seeing the problem with a non-GTK2 build of 20030506. I will try a mozilla.org build.
Yup, the problem is present in mozilla.org builds too. I've just downloaded the nightly sparc 2.7 build: http://ftp.mozilla.org/pub/mozilla/nightly/latest/mozilla-sparc-sun-solaris2.7.tar.gz which is 2003050601, and the problem is still present.
My bad. Fix coming up soon.
Assignee: sspitzer → ere
I broke this when fixing bug 137661. We need to explicitly say this isn't a dialog when there are arguments.
Comment on attachment 122691 [details] [diff] [review] Patch to fix the params to OpenWindow() Jag, r/sr for this follow-up for bug 137661?
Attachment #122691 - Flags: superreview?(jaggernaut)
Comment on attachment 122691 [details] [diff] [review] Patch to fix the params to OpenWindow() r+sr=jag
Attachment #122691 - Flags: superreview?(jaggernaut)
Attachment #122691 - Flags: superreview+
Attachment #122691 - Flags: review+
*** Bug 204764 has been marked as a duplicate of this bug. ***
Attachment #122691 - Flags: approval1.4?
Comment on attachment 122691 [details] [diff] [review] Patch to fix the params to OpenWindow() a=asa (on behalf of drivers) for checkin to 1.4.
Attachment #122691 - Flags: approval1.4? → approval1.4+
Fix checked in to trunk.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Flags: blocking1.4?
*** Bug 204995 has been marked as a duplicate of this bug. ***
*** Bug 205349 has been marked as a duplicate of this bug. ***
*** Bug 205414 has been marked as a duplicate of this bug. ***
*** Bug 205398 has been marked as a duplicate of this bug. ***
*** Bug 205500 has been marked as a duplicate of this bug. ***
*** Bug 205693 has been marked as a duplicate of this bug. ***
*** Bug 205722 has been marked as a duplicate of this bug. ***
*** Bug 206423 has been marked as a duplicate of this bug. ***
Product: Browser → Seamonkey
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: