Fix for bug 204248: No maximize/minimize buttons in new Mailnews window, and raise & lower broken r+sr=jag a=asa