mailnews/base/src/nsMessengerBootstrap.cpp
@@ -129,7 +129,7 @@ NS_IMETHODIMP nsMessengerBootstrap::OpenMessengerWindowWithUri(const char *windo
 	// to determine if we should open a new window, or use an existing one.
   nsCOMPtr<nsIDOMWindow> newWindow;
   rv = wwatch->OpenWindow(0, chromeurl.get(), "_blank",
-                 "chrome,extrachrome,menubar,resizable,scrollbars,status,toolbar",
+                 "chrome,extrachrome,menubar,resizable,scrollbars,status,toolbar,dialog=no",
                  argsArray,
                  getter_AddRefs(newWindow));
 
